dataset/local/tf_s3_lifecycle_configuration/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-lifecycle-bucket
      - type: aws_s3_bucket_lifecycle_configuration
        values:
          bucket: my-lifecycle-bucket
          rule:
            - id: expire-old-objects
              status: Enabled
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-lifecycle-bucket
